-feature#0001225: HowTo use the index at an arbitrary place in the OID field: introduces <rewrite_index>, <rewrite_value> to XML
-feature#0001290: Modify how 'Index Count Changed' re-index is used
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001406: Dynamically display field description for templates
-feature#0001408: Hide templated input fields
-feature#0001409: Add context sensitive page help linking to cacti dokuwiki
-feature#0001341: SNMP query: add oid_suffix for weird SNMP queries 
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature#0001439: New pseudo variable |host_template|, support all pseudo variable derived from host table
-feature#0001483: (OID|VALUE)/REGEXP for get input fields 
-feature#0001450: Template import script
-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001542: Rewriting SNMP values of data queries
-feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
-feature: jQuery "TableDnd" for Graph Template Item
-feature: jQuery "TableDnd" for Data Queries Suggested Values
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit