@@ -869,8 +869,15 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, $rr
 		"$scale" .
 		"$unit_value" .
 		"$unit_exponent_value" .
-		"$graph_legend" .
-		"--vertical-label=\"" . $graph["vertical_label"] . "\"" . RRD_NL;
+		"$graph_legend";
+
+	if (!empty($graph["vertical_label"])) {
+		$graph_opts .= "--vertical-label=\"" .
+			$graph["vertical_label"] . "\"" . RRD_NL;
+	}
+
+	/* Replace "|query_*|" in the graph command to replace e.g. vertical_label.  */
+	$graph_opts = rrd_substitute_host_query_data($graph_opts, $graph, $graph_item);
 
 	/* rrdtool 1.2.x, 1.3.x does not provide smooth lines, let's force it */
 	if (read_config_option("rrdtool_version") != "rrd-1.0.x") {
