@@ -42,6 +42,7 @@ Cacti CHANGELOG
 -feature#0001290: Modify how 'Index Count Changed' re-index is used
 -feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
 -feature#0001350: Compare Cacti Data Source Info to current RRD File Info
+-feature#0001401: allow "|query_foo|" substitution for graphing a --vertical-label
 -feature#0001406: Dynamically display field description for templates
 -feature#0001408: Hide templated input fields
 -feature#0001409: Add context sensitive page help linking to cacti dokuwiki
